# magnum-bindings

./: CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  README.md
doc/python/: .gitignore  conf-public.py  conf.py  corrade.containers.rst  corrade.pluginmanager.rst  corrade.rst  corrade.utility.rst  magnum.gl.rst  magnum.materialtools.rst  magnum.math.rst  magnum.meshtools.rst  magnum.platform.rst  magnum.primitives.rst  magnum.rst  magnum.scenegraph.rst  magnum.scenetools.rst  magnum.shaders.rst  magnum.text.rst  magnum.trade.rst
doc/python/pages/: api-conventions.rst  building.rst  changelog.rst  credits.rst  developers.rst  index.rst
modules/: CMakeLists.txt  FindMagnumBindings.cmake  MagnumBindingsConfig.cmake
package/archlinux/: .gitignore  PKGBUILD  PKGBUILD-coverage
package/archlinux/magnum-bindings-git/: PKGBUILD
package/ci/: appveyor-desktop-gles.bat  appveyor-desktop.bat  appveyor.yml  circleci.yml  codecov.yml  pybind11-system-includes.patch  setup-pybind11.sh  travis-desktop-gles.sh  travis-desktop.sh  travis.yml  unix-desktop-gles.sh  unix-desktop.sh
package/homebrew/: magnum-bindings.rb
src/: CMakeLists.txt
src/Corrade/: CMakeLists.txt  Python.h  PythonBindings.h
src/Corrade/Containers/: CMakeLists.txt  OptionalPythonBindings.h  Python.h  PythonBindings.h  StridedArrayViewPythonBindings.h
src/Corrade/PluginManager/: CMakeLists.txt  PythonBindings.h
src/Magnum/: CMakeLists.txt  Python.h  PythonBindings.h  StridedArrayViewPythonBindings.h  versionBindings.h.cmake
src/Magnum/GL/: CMakeLists.txt  Python.h  PythonBindings.h
src/Magnum/SceneGraph/: CMakeLists.txt  Python.h  PythonBindings.h
src/Magnum/Test/: CMakeLists.txt  VersionTest.cpp
src/Magnum/Trade/: CMakeLists.txt  PythonBindings.h
src/python/: CMakeLists.txt  setup.py.cmake
src/python/corrade/: CMakeLists.txt  EnumOperators.h  PyArrayView.h  PyBuffer.h  PybindExtras.h  __init__.py  __init__.py.in  bootstrap.h  containers.cpp  corrade.cpp  pluginmanager.cpp  pluginmanager.h  staticconfigure.h.cmake  utility.cpp
src/python/corrade/test/: CMakeLists.txt  __init__.py  broken.conf  file.conf  test_containers.py  test_containers_numpy.py  test_optional.cpp  test_pluginmanager.py  test_stridedarrayview.cpp  test_utility.py
src/python/magnum/: CMakeLists.txt  NonDestructible.h  PyGL.h  PyMesh.h  __init__.py  acessorsForPixelFormat.h  bootstrap.h  gl.cpp  magnum.cpp  materialtools.cpp  math.cpp  math.h  math.matrix.h  math.matrixdouble.cpp  math.matrixfloat.cpp  math.range.cpp  math.vector.h  math.vectorfloat.cpp  math.vectorintegral.cpp  meshtools.cpp  primitives.cpp  scenegraph.cpp  scenegraph.h  scenegraph.matrix.cpp  scenegraph.trs.cpp  scenetools.cpp  shaders.cpp  staticconfigure.h.cmake  text.cpp  trade.cpp
src/python/magnum/platform/: CMakeLists.txt  __init__.py  _init.py  application.h  cgl.cpp  egl.cpp  glfw.cpp  glx.cpp  holder.h  sdl2.cpp  wgl.cpp  windowlessapplication.h
src/python/magnum/test/: __init__.py  benchmark_math.py  convert.sh  image.gltf  material.gltf  mesh-packed.bin.in  mesh-packed.gltf  mesh.bin.in  mesh.gltf  scene.gltf  test.py  test_gl.py  test_gl_gl.py  test_materialtools.py  test_math.py  test_math_numpy.py  test_meshtools.py  test_meshtools_gl.py  test_primitives.py  test_scenegraph.py  test_scenegraph_matrix.py  test_scenegraph_numpy.py  test_scenegraph_trs.py  test_scenetools.py  test_shaders_gl.py  test_text.py  test_text_gl.py  test_trade.py  texture.gltf  two-meshes.gltf
